# ginkgo-solver-showcase

./: 01_hello_ginkgo.cpp  02_dense_random_solver.cpp  CMakeLists.txt  README.md
solve-saddle-point-systems-with-ginkgo/: CMakeLists.txt
solve-saddle-point-systems-with-ginkgo/src/: main.cpp
src/: 03_spd_dense_solver.cpp
